--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon server.js",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "build": "esbuild server.js --platform=node --bundle --minify --outfile=built/server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
+    "esbuild": "0.20.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
